k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donaton-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Permite que las rutas con /api lleguen correctamente si el BFF las procesa
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      # Todo el tráfico de la API va al BFF
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bff-service
            port:
              number: 8080
      # Todo el resto del tráfico va al Frontend (HTML, JS, CSS)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
